bug fixes as found from walk through. Counters can use 0 as a min count now, added a max count as well. Date range selector now has days of week displaying properly. filter drop down better responsive width. Added max guest count, bedroom count, bathroom count. Fixed filter popup to work correctly and fetch the right data. destination card hover has a pointer for cursor now to indicate it's all clickable. Show how many guests are applied for guest count on desktop. Added clear button to mobile filter and made sure it works. Put apply/clear buttons on top of the rest of the card so it doesn't break. Fixed header overlap.

--- a/src/components/appBar/AppBar.scss
+++ b/src/components/appBar/AppBar.scss
@@ -2,7 +2,7 @@
 
 .rsAppBar {
 	position: fixed;
-	top: 0;
+	top: 40px;
 	left: 0;
 	right: 0;
 	margin-left: auto;
@@ -12,7 +12,7 @@
 	align-items: center;
 	justify-content: space-between;
 	box-sizing: border-box;
-	height: 80px;
+	height: 0;
 	width: clamp(335px, 100%, 1920px);
 	transition: top 300ms;
 	&.hide {
