--- a/src/popups/filterReservationPopup/FilterReservationPopup.scss
+++ b/src/popups/filterReservationPopup/FilterReservationPopup.scss
@@ -108,7 +108,7 @@
 			width: 321px;
 			padding: 0 10px;
 			box-shadow: 0px -7px 10px -3px theme-var($greyLineColor);
-
+			z-index: 20;
 			.cancelButton {
 				margin-right: 10px;
 			}
